# Russian-Python-Project

./: .gitignore  README.md  build.sh  download_windows.bat  install_windows.bat  libraries.py  pyproject.toml  requirements.txt  ruspython.bat  ruspython.py  тест.py
examples/: hello.ру
libs/: std_collections.py  std_io.py  std_math.py  std_str.py
ruspython.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py  __main__.py  interfaces.py  lexer.py
src/ast/: nodes.py
src/backend/: translator.py
src/cli/: main.py
src/core/: lexer.py  parser.py
src/core/parser/: __init__.py
src/frontend/tokenizer/: __init__.py
src/runtime/: interpreter.py
