[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruspython"
version = "1.1.0"
description = "Русский Питон - язык программирования с русским синтаксисом (полноценный интерпретатор)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Команда Русский Питон", email = "ruspython@example.com"}
]
keywords = ["русский", "питон", "язык программирования", "russian", "programming language"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Compilers",
]
requires-python = ">=3.8"
dependencies = [
    "ply>=3.11",
    "pymorphy2>=0.9.1",
    "pymorphy2-dicts-ru>=2.4",
    "click>=8.0.0",
    "rich>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.scripts]
ruspython = "src.cli.main:main"

[project.urls]
Homepage = "https://github.com/ruspython/ruspython"
Documentation = "https://ruspython.readthedocs.io"
Repository = "https://github.com/ruspython/ruspython"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
