[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruspython"
version = "1.2.0"
description = "Русский Питон - язык программирования с русским синтаксисом (полноценный интерпретатор)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Команда Русский Питон", email = "ruspython@example.com"}
]
keywords = ["русский", "питон", "язык программирования", "russian", "programming language"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Compilers",
]
requires-python = ">=3.8"
dependencies = [
    "ply>=3.11",
    "pymorphy2>=0.9.1",
    "pymorphy2-dicts-ru>=2.4",
    "numba>=0.57.0",
    "cython>=3.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=12.0.0",
    "prompt_toolkit>=3.0.0",
    "colorama>=0.4.6",
    "orjson>=3.9.0",
    "msgpack>=1.0.5",
    "pyyaml>=6.0",
    "tree_sitter>=0.20.0",
    "regex>=2023.0.0",
    "chardet>=5.0.0",
    "typing_extensions>=4.5.0",
    "cachetools>=5.3.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "isort>=5.12.0",
]
perf = [
    # Тяжелые библиотеки для максимальной производительности
    "numpy>=1.24.0",          # ~15 МБ - числовые вычисления
    "scipy>=1.10.0",           # ~35 МБ - научные вычисления
    "llvmlite>=0.40.0",        # ~40 МБ - JIT-компиляция (требуется для numba)
]
full = [
    "ruspython[dev,perf]",
    "pyinstaller>=5.0.0",
    "functools32>=3.2.3.post1",
]

[project.scripts]
ruspython = "src.cli.main:main"

[project.urls]
Homepage = "https://github.com/ruspython/ruspython"
Documentation = "https://ruspython.readthedocs.io"
Repository = "https://github.com/ruspython/ruspython"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
